Continued page cleanup

--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -1,6 +1,6 @@
 <div class="condition-library-view">
 
-	<div class="view-title-container">
+	<div class="view-title-container no-border">
 		<h1>Condition Library</h1>
 	</div>
 
