--- a/modules/email-templates/client/views/email-template-list.html
+++ b/modules/email-templates/client/views/email-template-list.html
@@ -1,6 +1,6 @@
 <div class="email-templates-view">
 
-	<div class="view-title-container">
+	<div class="view-title-container no-border">
 		<h1>Email Templates</h1>
 	</div>
 
