--- a/modules/roles/client/views/role-list.html
+++ b/modules/roles/client/views/role-list.html
@@ -1,6 +1,6 @@
 <div class="system-roles-view"></div>
 
-	<div class="view-title-container">
+	<div class="view-title-container no-border">
 		<h1>System Roles</h1>
 	</div>
 
