--- a/modules/roles/client/views/role-edit.html
+++ b/modules/roles/client/views/role-edit.html
@@ -1,81 +1,89 @@
-<h1 class="page-title no-lower-margin">
-	Add / Edit System Roles
-</h1>
+<div class="edit-system-role-view">
 
-<form name="roleForm" novalidate>
+  <div class="view-title-container">
+    <h1>
+      <span>Add/Edit System Role</span><span ng-show="role.name">&nbsp; &rsaquo; &nbsp;{{ role.name }}</span>
+    </h1>
+  </div>
 
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.roles.list">Cancel</a>
-		<a class="btn btn-xs btn-link" href ng-click="save(roleForm.$valid)">Save</a>
-	</div>
+  <div class="view-body-container">
+    <form name="roleForm" novalidate>
+
+      <div class="row hidden">
+        <div class="col-sm-12 text-right">
+          <a class="btn btn-xs btn-link" ui-sref="admin.roles.list">Cancel</a>
+          <a class="btn btn-xs btn-link" href ng-click="save(roleForm.$valid)">Save</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="form-group">
+            <label for="name" class="control-label">Role Name</label>
+            <input id="name" name="name" type="text" class="form-control input-sm" ng-model="role.name">
+          </div>
+        </div>
+      </div>
+        
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="form-group">
+            <label for="code" class="control-label">Code</label>
+            <input id="code" name="code" type="text" ng-readonly="isEdit" class="form-control input-sm" ng-model="role.code">
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="form-group">
+            <label for="projectCode" class="control-label">Project Code</label>
+            <input id="projectCode" name="projectCode" type="text" class="form-control input-sm" ng-model="role.projectCode">
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="form-group">
+            <label for="orgCode" class="control-label">Organization Code</label>
+            <input id="orgCode" name="orgCode" type="text" class="form-control input-sm" ng-model="role.orgCode">
+          </div>
+        </div>
+        <div class="col-sm-3">
+          <div class="form-group">
+            <label for="roleCode" class="control-label">Role Code</label>
+            <input id="roleCode" name="roleCode" type="text" class="form-control input-sm" ng-model="role.roleCode">
+          </div>
+        </div>
+      </div>
+      
+      <div class="row checkbox-row">  
+        <div class="col-md-12">
+          <label class="control-label">Role Options</label>
+          <div class="form-group form-inline">
+          <div class="checkbox">
+            <label for="isSystem">
+              <input id="isSystem" name="isSystem" type="checkbox" ng-model="role.isSystem">Is System
+            </label>
+          </div>
+          <div class="checkbox">
+            <label for="isFunctional">
+              <input id="isFunctional" name="isFunctional" type="checkbox" ng-model="role.isFunctional">Is Functional
+            </label>
+          </div>
+          <div class="checkbox">
+            <label for="isProjectDefault">
+              <input id="isProjectDefault" name="isProjectDefault" type="checkbox" ng-model="role.isProjectDefault">Is Project Default
+            </label>
+          </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="form-footer clearfix">
+        <div class="pull-right">
+          <a class="btn btn-default btn-sm" ui-sref="admin.roles.list">Cancel</a>
+          <a class="btn btn-primary btn-sm" href ng-click="save(roleForm.$valid)">Save</a>
+        </div>
+      </div>
+
+    </form>
+  </div>
 </div>
-
-<div class="panel panel-default">
-	<div class="panel-body">
-		<div class="row">
-			<div class="col-sm-6">
-				<div class="form-group">
-					<label for="name" class="control-label">Name</label>
-					<input id="name" name="name" type="text" class="form-control input-sm" ng-model="role.name">
-				</div>
-			</div>
-		</div>
-    <div class="row">
-      <div class="col-sm-3">
-        <div class="form-group">
-          <label for="code" class="control-label">Code</label>
-          <input id="code" name="code" type="text" ng-readonly="isEdit" class="form-control input-sm" ng-model="role.code">
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="form-group">
-          <label for="projectCode" class="control-label">Project Code</label>
-          <input id="projectCode" name="projectCode" type="text" class="form-control input-sm" ng-model="role.projectCode">
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="form-group">
-          <label for="orgCode" class="control-label">Organization Code</label>
-          <input id="orgCode" name="orgCode" type="text" class="form-control input-sm" ng-model="role.orgCode">
-        </div>
-      </div>
-      <div class="col-sm-3">
-        <div class="form-group">
-          <label for="roleCode" class="control-label">Role Code</label>
-          <input id="roleCode" name="roleCode" type="text" class="form-control input-sm" ng-model="role.roleCode">
-        </div>
-      </div>
-    </div>
-    <div class="row">
-    <div class="col-sm-3">
-      <div class="form-group">
-        <label for="isSystem" class="control-label">Is System</label>
-        <input id="isSystem" name="isSystem" type="checkbox" class="form-control input-sm" ng-model="role.isSystem">
-      </div>
-    </div>
-    <div class="col-sm-3">
-      <div class="form-group">
-        <label for="isFunctional" class="control-label">Is Functional</label>
-        <input id="isFunctional" name="isFunctional" type="checkbox" class="form-control input-sm" ng-model="role.isFunctional">
-      </div>
-    </div>
-    <div class="col-sm-3">
-      <div class="form-group">
-        <label for="isProjectDefault" class="control-label">Is Project Default</label>
-        <input id="isProjectDefault" name="isProjectDefault" type="checkbox" class="form-control input-sm" ng-model="role.isProjectDefault">
-      </div>
-    </div>
-    </div>
-		<hr>
-
-		<div class="text-right">
-			<a class="btn btn-default" ui-sref="admin.roles.list">Cancel</a>
-			<a class="btn btn-default" href ng-click="save(roleForm.$valid)">Save</a>
-		</div>
-
-	</div>
-</div>
-</form>
 
 
