--- a/modules/roles/client/views/role-view.html
+++ b/modules/roles/client/views/role-view.html
@@ -1,24 +1,20 @@
-<h1 class="page-title no-lower-margin">
-	Add / Edit System Roles
-</h1>
-
-<div class="row">
-	<div class="col-sm-12 text-right">
-		<a class="btn btn-xs btn-link" ui-sref="admin.roles.list">Cancel</a>
-		<a class="btn btn-xs btn-link" ui-sref="admin.roles.edit({roleCode:role.code})">Edit</a>
+<div class="system-role-view">
+	
+	<div class="view-title-container">
+		<h1>System Role&nbsp; &rsaquo; &nbsp;{{ role.name }}</h1>
 	</div>
-</div>
 
-<div class="panel panel-default">
-	<div class="panel-body">
+	<div class="view-body-container">
+
     <div class="row">
-      <div class="col-sm-6">
+      <div class="col-sm-12">
         <div class="form-group">
-          <label for="name" class="control-label">Name</label>
+          <label for="name" class="control-label">Role Name</label>
           <p class="form-control-static">{{ role.name }}</p>
         </div>
       </div>
     </div>
+		
     <div class="row">
 			<div class="col-sm-3">
 				<div class="form-group">
@@ -48,58 +44,88 @@
 				</div>
 			</div>
 		</div>
-<div class="row">
-  <div class="col-sm-3">
-    <div class="form-group">
-      <label for="isSystem" class="control-label">Is System</label>
-      <p class="form-control-static">{{ role.isSystem }}</p>
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="form-group">
-      <label for="isFunctional" class="control-label">Is Functional</label>
-      <p class="form-control-static">{{ role.isFunctional }}</p>
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="form-group">
-      <label for="isProjectDefault" class="control-label">Is Project Default</label>
-      <p class="form-control-static">{{ role.isProjectDefault }}</p>
-    </div>
-  </div>
-</div>
+		
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-sm-3">
 				<div class="form-group">
-					<label for="roleCode" class="control-label">Usage</label>
-					<table class="table table-condensed table-striped">
-						<thead>
-							<tr><th width="25%">System Element</th><th>&nbsp;</th></tr>
-						</thead>
-						<tbody>
-							<tr><td>Users</td><td>{{ role.users.length || 'Not Used' }}</td></tr>
-							<tr><td>Projects</td><td>{{ role.projects.length || 'Not Used' }}</td></tr>
-							<tr><td>Activities</td><td>{{ role.activities.length || 'Not Used' }}</td></tr>
-							<tr><td>Features</td><td>{{ role.features.length || 'Not Used' }}</td></tr>
-							<tr><td>Artifacts</td><td>{{ role.artifacts.length || 'Not Used' }}</td></tr>
-							<tr><td>Documents</td><td>{{ role.documents.length || 'Not Used' }}</td></tr>
-							<tr><td>Comments</td><td>{{ role.comments.length || 'Not Used' }}</td></tr>
-							<tr><td>Public Comments</td><td>{{ role.publiccomments.length || 'Not Used' }}</td></tr>
-							<tr><td>Comment Periods</td><td>{{ role.commentperiod.length || 'Not Used' }}</td></tr>
-						</tbody>
-					</table>
+					<label for="isSystem" class="control-label">Is System</label>
+					<p class="form-control-static">{{ role.isSystem }}</p>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="isFunctional" class="control-label">Is Functional</label>
+					<p class="form-control-static">{{ role.isFunctional }}</p>
+				</div>
+			</div>
+			<div class="col-sm-3">
+				<div class="form-group">
+					<label for="isProjectDefault" class="control-label">Is Project Default</label>
+					<p class="form-control-static">{{ role.isProjectDefault }}</p>
 				</div>
 			</div>
 		</div>
 
-		<hr>
+		<!-- ROLE USAGE LIST -->
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h2>Role Usage</h2>
+			</div>
+			<table class="table table-condensed table-striped">
+				<thead>
+					<tr>
+						<th colspan="2">System Element</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Users</td>
+						<td>{{ role.users.length || 'Not Used' }}</td>
+					</tr>
+					<tr>
+						<td>Projects</td>
+						<td>{{ role.projects.length || 'Not Used' }}</td>
+					</tr>
+					<tr>
+						<td>Activities</td>
+						<td>{{ role.activities.length || 'Not Used' }}</td>
+					</tr>
+					<tr>
+						<td>Features</td>
+						<td>{{ role.features.length || 'Not Used' }}</td>
+					</tr>
+					<tr>
+						<td>Artifacts</td>
+						<td>{{ role.artifacts.length || 'Not Used' }}</td>
+					</tr>
+					<tr>
+						<td>Documents</td>
+						<td>{{ role.documents.length || 'Not Used' }}</td>
+					</tr>
+					<tr>
+						<td>Comments</td>
+						<td>{{ role.comments.length || 'Not Used' }}</td>
+					</tr>
+					<tr>
+						<td>Public Comments</td>
+						<td>{{ role.publiccomments.length || 'Not Used' }}</td>
+					</tr>
+					<tr>
+						<td>Comment Periods</td>
+						<td>{{ role.commentperiod.length || 'Not Used' }}</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 
-		<div class="text-right">
-			<a class="btn btn-default" ui-sref="admin.roles.list">Cancel</a>
-			<a class="btn btn-default" ui-sref="admin.roles.edit({roleCode:role.code})">Edit</a>
+		<div class="form-footer no-border clearfix">
+				<a class="btn btn-default btn-sm pull-left" ui-sref="admin.roles.list">&lsaquo;&nbsp; Back to System Roles</a>
+				<a class="btn btn-default btn-sm pull-right" ui-sref="admin.roles.edit({roleCode:role.code})">Edit</a>
 		</div>
 
 	</div>
+</div>
+
 </div>
 
 
