--- a/modules/roles/client/views/role-edit.html
+++ b/modules/roles/client/views/role-edit.html
@@ -2,7 +2,7 @@
 
   <div class="view-title-container">
     <h1>
-      <span>Add/Edit System Role</span><span ng-show="role.name">&nbsp; &rsaquo; &nbsp;{{ role.name }}</span>
+      <span>Add/Edit System Role</span>
     </h1>
   </div>
 
