--- a/modules/roles/client/views/partials/modal-object-permissions.html
+++ b/modules/roles/client/views/partials/modal-object-permissions.html
@@ -1,29 +1,23 @@
 <div class="modal-header">
-  <h3 class="modal-title">Permissions</h3>
+  <h3 class="modal-title">Permission Settings</h3>
 </div>
 <div class="modal-body">
-  <table class="table table-condensed table-striped table-hover">
+  <table class="permissions-settings-table table table-condensed table-striped table-hover">
     <thead>
     <tr>
-      <th width="40%">Roles</th>
-      <th width="20%" ng-repeat="key in self.keys"  class="text-center">{{ key | titleCase }}</th>
+      <th>Roles</th>
+      <th class="permissions-col" ng-repeat="key in self.keys">{{ key | titleCase }}</th>
     </tr>
     </thead>
     <tbody>
     <tr ng-repeat="role in self.roles">
-      <td width="40%">{{ self.getName(role) }}</td>
-      <td width="20%"
+      <td>{{ self.getName(role) }}</td>
+      <td class="permissions-col"
           ng-repeat="key in self.keys"
-          class="text-center"
           ng-click="self.togglePermission(role, key)"
           ng-class="{'success': (self.objectRoles.permissions|accessHasRole:role:key), 'info': (self.objectRoles.permissions|accessInferredRole:role:key)}">
-
-					<span ng-show="self.objectRoles.permissions|accessHasRole:role:key"
-                class="text-success glyphicon glyphicon-ok"></span>
-
-					<span ng-hide="self.objectRoles.permissions|accessHasRole:role:key"
-                class="text-danger glyphicon glyphicon-remove"></span>
-
+					<span class="text-success glyphicon glyphicon-ok" ng-show="self.objectRoles.permissions|accessHasRole:role:key"></span>
+					<span class="glyphicon glyphicon-unchecked" ng-hide="self.objectRoles.permissions|accessHasRole:role:key"></span>
       </td>
     </tr>
     </tbody>
