--- a/modules/roles/client/views/role-view.html
+++ b/modules/roles/client/views/role-view.html
@@ -1,7 +1,7 @@
 <div class="system-role-view">
 	
 	<div class="view-title-container">
-		<h1>System Role&nbsp; &rsaquo; &nbsp;{{ role.name }}</h1>
+		<h1>System Roles&nbsp; &rsaquo; &nbsp;{{ role.name }}</h1>
 	</div>
 
 	<div class="view-body-container">
