Put in screen placeholders and controller logic for unknown Siteminder users.  Still need boilerplate text and layout work.

--- a/modules/core/client/views/footer.client.view.html
+++ b/modules/core/client/views/footer.client.view.html
@@ -10,8 +10,9 @@
 				<a target="_new" href="http://www.gov.bc.ca/com/privacy.html" title="BC Government Privacy Information">Privacy</a> |
 				<a target="_new" href="http://www.gov.bc.ca/com/accessibility.html" title="BC Government Accessibility Information">Accessibility</a> |
 				<a ng-show="!footer.authentication.user" ui-sref="authentication.signin">Log In</a>
-				<a ng-show="footer.authentication.user" href="/api/auth/signout" target="_self">Logout</a>
-			</div>
-		</div>
-	</div>
+        <!-- TODO: Siteminder! get the Siteminder logout url and set it here -->
+        <a ng-show="footer.authentication.user" href="/api/auth/signout" target="_self">Logout</a>
+    </div>
+</div>
+</div>
 </div>
