--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -41,7 +41,7 @@
 				</a>
 				<ul class="dropdown-menu pull-right" aria-labelledby="userMenu">
           <li><a x-modal-edit-my-profile href>Edit Profile</a></li>
-
+          <!-- TODO: Siteminder! get the Siteminder logout url and set it here -->
           <li><a href="/api/auth/signout" target="_self">Logout</a></li>
 				</ul>
 			</li>
