--- a/modules/projects/client/views/projects.abstract.html
+++ b/modules/projects/client/views/projects.abstract.html
@@ -42,7 +42,7 @@
 
 					<div class="row">
 						<div class="col-sm-4" ng-init="form.expandnews = false">
-							<div class="panel panel-default recent-activity">
+							<div class="panel panel-default news-feed">
 								<div class="panel-heading"><h2>News & Announcements</h2></div>
 								<div class="panel-body">
 									<tmpl-recent-activity id="anchor-recent" x-form="form"></tmpl-recent-activity>
