--- a/modules/recent-activity/client/views/recent-activity.html
+++ b/modules/recent-activity/client/views/recent-activity.html
@@ -1,29 +1,28 @@
-<div class="recent-activity-view">
+<div class="news-feed-view">
 	
-	<section ng-repeat="activity in recentActs">
+	<section class="news-feed-item" ng-repeat="activity in recentActs">
 		<div class='news-headline clickable' ui-sref="p.detail({projectid: projectlookup[activity.project].code })">
-			<h4>{{ activity.headline }}</h4>
-			<p class="news-content">{{ activity.content | maxWords:30:activity.showmore }}</p>
-			<p ng-if="(activity.content | wordCount) > 30" class="news-more">
+			<p class="news-date-type">{{ activity.dateAdded | date }} &nbsp;&bullet;&nbsp; {{ activity.type }}</p>
+			<h2 class="news-title">{{ activity.headline }}</h2>
+			<p class="news-content">{{ activity.content | maxWords:20:activity.showmore }}</p>
+			<div class="show-more" ng-if="(activity.content | wordCount) > 20">
 				<a href ng-click="$event.stopPropagation(); activity.showmore = !activity.showmore">
-					<span ng-show="!activity.showmore"><em>More ({{ activity.content | wordCount }} words)</em></span>
-					<span ng-show="activity.showmore"><em>Less</em></span>
+					<span ng-show="!activity.showmore">Show More ({{ activity.content | wordCount }} words) <span class="caret"></span></span>
+					<span ng-show="activity.showmore">Show Less <span class="caret-up"></span></span>
 				</a>
-			</p>
-			<p><em>{{ activity.dateAdded | date }} &bullet; {{ activity.type }}</em></p>
-			<hr>
+			</div>
 		</div>
 	</section>
 
+	<div>
+		<a class="show-all-news-link btn btn-link" href="/news">View all News & Announcements</a>
+	</div>
+	
 	<section class="panel panel-default hidden" ng-show="!recentActs || recentActs.length === 0">
 		<div>
 			<h3 class="no-lower-margin">News and Notices</h3>
 			<p>Please check back here for recent activity notices.</p>
 		</div>
 	</section>
-	<a href class="btn show-news" ng-show="recentActs && recentActs.length !== 0" ng-click="form.expandnews = !form.expandnews">
-		<span ng-show="!form.expandnews">Show All News</span>
-		<span ng-show="form.expandnews">Minimize News</span>
-	</a>
 	
 </div>
