User Add/Edit through Organizations - show only System Roles that are not intended for project use.  Also, do not auto populate the EAO/Proponent role based on current user.  Allow Admin to set.

--- a/modules/organizations/client/views/organization-user-edit.html
+++ b/modules/organizations/client/views/organization-user-edit.html
@@ -189,7 +189,7 @@
 
         <div class="col-sm-3" ng-show="roles.length > 0">
           <label for="complaint" class="control-label">Roles</label>
-          <select-array x-source-array="roles" x-selected-array='user.roles' x-key-string="code" x-value-string="code"></select-array>
+          <select-array x-source-array="roles" x-selected-array='user.roles' x-key-string="code" x-value-string="name"></select-array>
 
         </div>
 
