Remove template link for now

--- a/modules/projects/client/views/project-partials/project.schedule.html
+++ b/modules/projects/client/views/project-partials/project.schedule.html
@@ -30,7 +30,7 @@
 								<td>{{row.name}}</td>
 								<td>{{row.dateStartedEst | date : format : timezone}} / {{row.dateCompletedEst | date : format : timezone}}</td>
 								<td>{{row.status}}</td>
-								<td>-Template Link-</td>
+								<!-- <td>-Template Link-</td> -->
 								<td class="button-col"><button class="btn btn-default btn-sm">BUTTON</button></td>
 								<td class="actions-col">
 									<button class="btn btn-link">
