Continued interface development on recent activity views

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2473,7 +2473,7 @@ section.project-info {
 		}
 		
 		td {
-			padding: 1.5rem;
+			padding: 2rem 1.5rem;
 		}
 	}
 	
@@ -2593,30 +2593,6 @@ section.project-info {
 			margin-top: -8px;
 			margin-bottom: -6px;
 		}
-	}
-}
-
-
-/* RECENT ACTIVITY VIEW
------------------------------- */
-.recent-activity-view {
-	padding-top: 1rem;
-	padding-bottom: 1rem;
-	
-	h4 {
-		font-size: 1.8rem;
-		font-weight: bold;
-		margin-top: 0;
-		margin-bottom: 1.25rem;
-	}
-	
-	p {
-		font-size: 1.2rem;
-		
-	}
-	
-	hr {
-		border-color: #CCC;
 	}
 }
 
