--- a/modules/recent-activity/client/views/recent-activity-news-list.html
+++ b/modules/recent-activity/client/views/recent-activity-news-list.html
@@ -1,7 +1,7 @@
 <div class="news-public-view">
 
 	<div class="view-title-container no-border">
-		<h1>Recent News</h1>
+		<h1>News & Announcements</h1>
 	</div>
 
 	<div class="view-body-container">
