--- a/modules/recent-activity/client/views/recent-activity-list.html
+++ b/modules/recent-activity/client/views/recent-activity-list.html
@@ -1,7 +1,7 @@
 <div class="news-admin-view">
 
 	<div class="view-title-container no-border">
-		<h1>Recent News</h1>  
+		<h1>News & Announcements</h1>  
 	</div>
 
 	<div class="view-body-container">
@@ -9,7 +9,7 @@
 		<div class="button-bar clearfix">
 			<a class="btn btn-default btn-sm pull-left" ui-sref="admin.recentactivity.create()">
 				<span class="glyphicon glyphicon-plus"></span>
-				<span>Add Recent News</span>
+				<span>Add</span>
 			</a>
 			<div class="pull-right">
 				<show-filter x-toggle-filter="toggleFilter"></show-filter>
